2025-02-23  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* riffle.el (riffle-mode-localvar-advice):
	ensure the variables are buffer-local.
	This might be the correct fix for the faces issue #22.
	https://github.com/kaorahi/howm/issues/22
	https://github.com/kaorahi/howm/issues/29#issuecomment-2625076294

2025-02-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-misc.el (howm-auto-theme):
	add automatic theming feature
	thx > Jabir Ali Ouassou san (jabir.ali.ouassou at hvl.no)
	https://github.com/kaorahi/howm/issues/34

2025-02-17  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-date.el (howm-action-lock-date-quickshift)
	(howm-action-lock-date, howm-action-lock-date-shift):
	allow shifting dates using square bracket keys
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/pull/51

2025-01-30  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* configure.ac: version 1.5.3

2025-01-28  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-mode.el (howm-list-all, howm-list-recent):
	create new notes when the list is empty
	https://github.com/kaorahi/howm/issues/35
	thx > Jabir Ali Ouassou san (jabir.ali.ouassou at hvl.no)

2025-01-26  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-mode.el
	(howm-initialize-buffer, howm-before-save, howm-after-save):
	fix duplicated "Wrote ..." message
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/pull/32#issuecomment-2607371907

	* howm-common.el (howm-basic-save-buffer): ditto.

2025-01-22  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-mode.el (howm-list-all, howm-list-recent):
	add message for empty list to help beginners
	thx > @rhstanton san
	https://github.com/kaorahi/howm/issues/28

	* howm-menu.el (howm-find-yesterday):
	Fix howm-find-yesterday prefix arg handling
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/pull/32

	* howm-vars.el (howm-menu-footer):
	Fix howm-menu-footer documentation